<resources>
    <string name="app_name">FridgeCheck</string>
    <string name="home_title">Find Your Daily Grocery</string>
    <string name="search_bar">Search your desired products...</string>
    <string name="filter_desc">Filter</string>
    <string name="general_desc">general_desc</string>
    <string name="wishlist">WishList</string>
    <string name="settings">Settings</string>
    <string name="Best_Selling">Best Selling</string>
    <string name="Newest_items">Newest</string>
    <string name="imported_items">Imported Items</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Snacks">Snacks</string>
    <string name="Beverages">Beverages</string>
    <string name="Dairy">Dairy</string>
    <string name="Fish">Fish</string>
    <string name="Cake">Cake</string>
    <string name="Biscuits">Biscuits</string>
    <string name="Oranges">Oranges</string>
    <string name="Lemon">Lemon</string>
    <string name="Apple">Apple</string>
    <string name="stock">stock</string>
    <string name="two_hundred">200</string>
    <string name="heart">heart</string>
    <string name="twenty_thou">20,000 L.L.</string>
    <string name="breakfast">Breakfast</string>
    <string name="snacks">snacks</string>
    <string name="Categories">Categories</string>
    <string name="left_arrow">left arrow</string>
    <string name="lunch">Lunch</string>
    <string name="beverages">Beverages</string>
    <string name="dairy">Dairy</string>
    <string name="seafood">SeaFood</string>
    <string name="cakes">Cakes</string>
    <string name="biscuits">Biscuits</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="protein">Protein</string>
    <string name="bread">Bread</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="call_us">Call Us</string>

    <string name="about_our_app">About our app</string>

    <string name="log_out">Log out</string>

    <string name="name">Name</string>

    <string name="username">Username</string>

    <string name="e_mail">E-mail</string>

    <string name="callOn">Call us on \n 76789101</string>

    <string name="about_us">About Us</string>

    <string name="your">Your online supermarket.</string>

    <string name="shop">Shop fresh. Shop different.</string>

    <string name="alltext">Why go to the supermarket when the supermarket can come to you? Browse and shop from thousands of items through markit. From freshly baked morning breads, to late night chocolate cravings, you’ll get it all covered with just a few clicks.</string>

    <string name="password">Password</string>

    <string name="sign_in">SIGN IN</string>

    <string name="noaccount">Don\'t have an account?</string>

    <string name="register_here">Register here!</string>

    <string name="login">Login</string>

    <string name="register">REGISTER</string>

    <string name="confirm_password">Confirm Password</string>

    <string name="already">Already have an account?</string>

    <string name="log_in2">Log In!</string>

    <string name="reeses">Reeses Chocolate</string>

    <string name="price">LBP 17,000</string>

    <string name="toblerone">Toblerone</string>

    <string name="tobleroneprice">LBP 15,000</string>

    <string name="lindt">Lindt Lindor</string>

    <string name="lindtprice">LBP 95,000</string>

    <string name="snickers">Snickers</string>

    <string name="snickersprice">LBP 8,500</string>

    <string name="description">42g - 2 cups</string>

    <string name="quantity">Quantity: 57</string>
    <string name="back_to_settings">back to settings</string>
    <string name="add_item">Add Item</string>
    <string name="import_image">Import Image</string>
    <string name="uploadname">Name:</string>
    <string name="priceupload">Price:</string>
    <string name="descriptionupload">Description:</string>
    <string-array name="Quantity">
        <item>0-50</item>
        <item>5-100</item>
        <item>100-150</item>
        <item>150-200</item>
        <item>200-250</item>
        <item>25-300</item>
        <item>>300</item>
    </string-array>
    <string-array name="type">
        <item>BestSelling</item>
        <item>Imported</item>
        <item>Newest</item>
    </string-array>
    <string-array name="category">
        <item>Breakfast</item>
        <item>Snacks</item>
        <item>Beverages</item>
        <item>Dairy</item>
        <item>Fish</item>
        <item>Cake</item>
        <item>Biscuits</item>
        <item>Fruits</item>
    </string-array>
</resources>