<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/Oranges" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Oranges"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/stock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/stock"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/itemStockNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/two_hundred"
                        android:textColor="#55CCFF"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/itemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty_thou"
                    android:textColor="#55CCFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/favouriteButton"
                style="@style/heartStyle"
                android:layout_weight="0.5"
                android:contentDescription="@string/heart"
                app:srcCompat="@drawable/ic_baseline_empty_heart" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
