<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#6FC9EF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/home_title"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_edges"

                android:drawableStart="@drawable/ic_baseline_search"
                android:hint="@string/search_bar"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            style="@style/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/Categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Categories"
                android:textColor="#454545"
                android:textSize="24sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/Categories_Scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/breakfastCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="#6FC9EF"
                            app:cardCornerRadius="15dp">

                            <ImageView
                                android:id="@+id/breadImage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/Breakfast"
                                app:srcCompat="@drawable/bread" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/breakfast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Breakfast"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/SnacksCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="#6FC9EF"
                            app:cardCornerRadius="15dp">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/Snacks"
                                app:srcCompat="@drawable/snacks" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/snacks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Snacks"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/BeveragesCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="#6FC9EF"
                            app:cardCornerRadius="15dp">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/Beverages"
                                app:srcCompat="@drawable/beverages" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/Beverages"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Beverages"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/DairyCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="#6FC9EF"
                            app:cardCornerRadius="15dp">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/Dairy"
                                app:srcCompat="@drawable/dairy" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/Dairy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Dairy"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/FishCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="#6FC9EF"
                            app:cardCornerRadius="15dp">

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/Fish"
                                app:srcCompat="@drawable/fish" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/Fish"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Fish"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/CakeCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="#6FC9EF"
                            app:cardCornerRadius="15dp">

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/Cake"
                                app:srcCompat="@drawable/cake" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/Cake"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Cake"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/BiscuitsCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="#6FC9EF"
                            app:cardCornerRadius="15dp">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:contentDescription="@string/Biscuits"
                                app:srcCompat="@drawable/biscuits" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/Biscuits"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Biscuits"
                            android:textColor="#000000" />

                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="320dp"
                android:background="@color/lightblue"
                app:fabSize="normal"
                android:backgroundTint="@color/lightblue"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <TextView
                android:id="@+id/Newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Newest_items"
                android:textColor="#454545"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item" />


            <TextView
                    android:id="@+id/BestSelling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Best_Selling"
                    android:textColor="#454545"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bestrecyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item" />


            <TextView
                android:id="@+id/ImportedItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/imported_items"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/importrecyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>